# rasciirizer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json
examples/: cube.h  donut  miku.h  penger.h  pretzel.h
include/: AssetImporter.h  Math.h  Matrices.h  Matrix.h  Matrix.inl  Renderer.h  Renderer.inl  Vector.h  Vector2D.h  Vector3D.h  Vector4D.h  Window.h  sgm.h
src/: AssetImporter.cpp  Math.cpp  Renderer.cpp  Vector3D.cpp  main.cpp
